solve macOs bug; solve incorrect letter-spacing on headers

--- a/src/components/callouts.scss
+++ b/src/components/callouts.scss
@@ -1,67 +1,71 @@
 body {
-    --callout-padding: var(--size-4-3) var(--size-4-3);
-    --callout-radius: var(--radius-m);
+  --callout-padding: var(--size-4-3) var(--size-4-3);
+  --callout-radius: var(--radius-m);
 
-    --callout-blend-mode: unset;
+  --callout-blend-mode: unset;
 
-    --callout-title-padding: 0;
-    --callout-title-weight: calc(var(--font-weight) + var(--semibold-modifier));
-    --callout-content-padding: 0;
-    --callout-content-background: transparent;
-    --embed-block-shadow-hover: 0;
+  --callout-title-padding: 0;
+  --callout-title-weight: calc(var(--font-weight) + var(--semibold-modifier));
+  --callout-content-padding: 0;
+  --callout-content-background: transparent;
+  --embed-block-shadow-hover: 0;
 
-    .callout {
-      background-color: color-mix(in srgb, var(--callout-color) 20%, transparent);
-      border: 1px solid;
-      border-color: color-mix(in srgb, var(--callout-color) 60%, transparent);
-      // box-shadow: rgb(from var(--callout-color) r g b / 1) inset 0 2px 24px -16px;
+  .callout {
+    background-color: color-mix(in srgb, var(--callout-color) 20%, transparent);
+    border: 1px solid;
+    border-color: color-mix(in srgb, var(--callout-color) 60%, transparent);
+    // box-shadow: rgb(from var(--callout-color) r g b / 1) inset 0 2px 24px -16px;
 
-      color: var(--callout-color);
-      display: flex;
-      flex-direction: column;
-      gap: var(--size-4-1);
-      
-      .callout-title {
-        gap: var(--size-2-3);
-        letter-spacing: 0.02em;
-        color: var(--callout-title-color);
-      }
+    color: var(--callout-color);
+    display: flex;
+    flex-direction: column;
+    gap: var(--size-4-1);
 
-      .callout-content p {
-          color: var(--callout-content);        
-          margin: 0;
-          line-height: var(--line-height-tight);
-      }
+    .callout-title {
+      gap: var(--size-2-3);
+      letter-spacing: 0.02em;
+      color: var(--callout-title-color);
     }
+
+    .callout-content p {
+      color: var(--callout-content);
+      margin: 0;
+      line-height: var(--line-height-tight);
+    }
+  }
 }
 
-body { // DEFAULT
+body {
+  // DEFAULT
   --callout-default: var(--blue-300);
   --callout-title-color: var(--blue-400);
   --callout-content: var(--blue-600);
 }
 
-body { // DEFAULT
- --callout-default: var(--blue-300);
+body {
+  // DEFAULT
+  --callout-default: var(--blue-300);
 
- .callout[data-callout="default"] {
-   --callout-title-color: var(--blue-400);
-   --callout-content: var(--blue-600);
- }
+  .callout[data-callout="default"] {
+    --callout-title-color: var(--blue-400);
+    --callout-content: var(--blue-600);
+  }
 }
 
-body {  // ABSTRACT // TLDR // SUMMARY
- --callout-summary: var(--gray-300);
+body {
+  // ABSTRACT // TLDR // SUMMARY
+  --callout-summary: var(--gray-300);
 
- .callout[data-callout="summary"],
- .callout[data-callout="tldr"],
- .callout[data-callout="abstract"] {
-   --callout-title-color: var(--gray-500);
-   --callout-content: var(--gray-700);
- }
+  .callout[data-callout="summary"],
+  .callout[data-callout="tldr"],
+  .callout[data-callout="abstract"] {
+    --callout-title-color: var(--gray-500);
+    --callout-content: var(--gray-700);
+  }
 }
 
-body { // INFO
+body {
+  // INFO
   --callout-info: var(--gray-400);
   .callout[data-callout="info"] {
     --callout-title-color: var(--gray-900);
@@ -69,15 +73,17 @@ body { // INFO
   }
 }
 
-body { // TODO
+body {
+  // TODO
   --callout-todo: var(--blue-300);
-  .callout[data-callout="todo"], {
+  .callout[data-callout="todo"] {
     --callout-title-color: var(--blue-500);
     --callout-content: var(--blue-700);
   }
 }
 
-body { // TIP, HINT
+body {
+  // TIP, HINT
   --callout-tip: var(--sea-green-300);
   .callout[data-callout="tip"],
   .callout[data-callout="hint"] {
@@ -86,16 +92,17 @@ body { // TIP, HINT
   }
 }
 
-body { // IMPORTANT
+body {
+  // IMPORTANT
   --callout-important: var(--orange-300);
   .callout[data-callout="important"] {
     --callout-title-color: var(--orange-400);
     --callout-content: var(--orange-700);
- 
   }
- }
+}
 
-body { // SUCCESS, CHECK, DONE
+body {
+  // SUCCESS, CHECK, DONE
   --callout-success: var(--green-300);
   .callout[data-callout="success"],
   .callout[data-callout="check"],
@@ -105,7 +112,8 @@ body { // SUCCESS, CHECK, DONE
   }
 }
 
-body { // QUESTION, FAQ, HELP
+body {
+  // QUESTION, FAQ, HELP
   --callout-question: var(--orange-300);
   .callout[data-callout="question"],
   .callout[data-callout="help"],
@@ -115,7 +123,8 @@ body { // QUESTION, FAQ, HELP
   }
 }
 
-body { // WARNING, ATTENTION, CAUTION
+body {
+  // WARNING, ATTENTION, CAUTION
   --callout-warning: var(--orange-300);
   .callout[data-callout="warning"],
   .callout[data-callout="attention"],
@@ -125,9 +134,10 @@ body { // WARNING, ATTENTION, CAUTION
   }
 }
 
-body { // FAILURE, FAIL, MISSING
+body {
+  // FAILURE, FAIL, MISSING
   --callout-fail: var(--red-300);
- 
+
   .callout[data-callout="fail"],
   .callout[data-callout="failure"],
   .callout[data-callout="missing"] {
@@ -136,7 +146,8 @@ body { // FAILURE, FAIL, MISSING
   }
 }
 
-body { // ERROR, DANGER
+body {
+  // ERROR, DANGER
   --callout-error: var(--red-300);
 
   .callout[data-callout="error"],
@@ -145,32 +156,35 @@ body { // ERROR, DANGER
     --callout-content: var(--red-600);
   }
 }
-body { // BUG
- --callout-bug: var(--red-300);
+body {
+  // BUG
+  --callout-bug: var(--red-300);
 
- .callout[data-callout="bug"] {
-   --callout-title-color: var(--red-400);
-   --callout-content: var(--red-700);
- }
+  .callout[data-callout="bug"] {
+    --callout-title-color: var(--red-400);
+    --callout-content: var(--red-700);
+  }
 }
 
-body { // EXAMPLE
- --callout-example: var(--yellow-300);
- 
- .callout[data-callout="example"] {
-   --callout-title-color: var(--yellow-400);
-   --callout-content: var(--yellow-800);
- }
+body {
+  // EXAMPLE
+  --callout-example: var(--yellow-300);
+
+  .callout[data-callout="example"] {
+    --callout-title-color: var(--yellow-400);
+    --callout-content: var(--yellow-800);
+  }
 }
 
-body { // QUOTE, CITE
+body {
+  // QUOTE, CITE
   --callout-quote: var(--gray-300);
-  
+
   .callout[data-callout="quote"],
   .callout[data-callout="cite"] {
     --callout-title-color: var(--gray-500);
     --callout-content: var(--gray-700);
-  }   
+  }
 }
 
 // .callout-content p {
@@ -181,7 +195,7 @@ body { // QUOTE, CITE
 // .callout {
 //   border-radius: 12px;
 // }
-// /* 
+// /*
 // .list-view-ul:before {
 //   content: '';
 //   margin-top: -8px !important;
