--- a/src/components/headers.scss
+++ b/src/components/headers.scss
@@ -82,7 +82,7 @@ body {
   font-variation-settings: "opsz" 32;
   font-kerning: normal;
   text-wrap: balance;
-  letter-spacing: 1px;
+  letter-spacing: 0.01em;
 }
 
 // .markdown-rendered h1,
